--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
     <!-- Open Graph-->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="La chouette agence - création de design web professionnel sur Lyon">
-    <meta property="og:description" content="Agence de création et refonte design web situé à Lyon. Nous assurons un design et une visibilité de qualité professionnel à vos sites internet.">
+    <meta property="og:title" content="La chouette agence - agence de webdesign professionnel sur Lyon">
+    <meta property="og:description" content="Agence de création et refonte webdesign situé à Lyon. Nous assurons un design et une visibilité de qualité professionnel à vos sites internet.">
     <meta property="og:url" content="https://adrienlhg.github.io/la-chouette-agence/">
     <meta property="og:image" content="la-chouette-agence.png">
     <meta property="og:site_name" content="La chouette agence">
@@ -54,7 +54,7 @@
 
                 <nav class="navbar row">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" width="214" height="40" class="logo" alt="paris web design logo agence web meilleure agence" /></a>
+                        <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" width="214" height="40" class="logo" alt="logo la chouette agence" /></a>
                         <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
                             <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
                         </button>
@@ -88,7 +88,7 @@
                         <h1 class="text-center hero-bloc-text tc-white">
                             La Chouette Agence
                         </h1>
-                        <h2 class="col-sm-12 text-center white">La chouette agence est une agence de <strong>web design à Lyon</strong> qui aide les entreprises à devenir attractives et visibles sur internet.</h2>
+                        <h2 class="col-sm-12 text-center white">La chouette agence est une agence de <strong>webdesign à Lyon</strong> qui aide les entreprises à devenir attractives et visibles sur internet.</h2>
                         <div class="text-center">
                             <a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
                         </div>
@@ -105,10 +105,10 @@
                         <span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
                     </div>
                     <h3 class="mg-md text-center">
-                        Web design
+                        Webdesign
                     </h3>
                     <p class="text-center ">
-                        Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+                        Que vous ayez besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez notre équipe de webdisgners vous réaliser un site dont vous serez fier.
                     </p>
                 </div>
                 <div class="col-sm-4">
@@ -119,7 +119,7 @@
                         &nbsp;Stratégie
                     </h3>
                     <p class="text-center ">
-                        Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
+                        Plutôt que de suggérer des designs à la mode, nos webdesigners avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur webdesign possible.<br>
                     </p>
                 </div>
                 <div class="col-sm-4">
@@ -130,13 +130,13 @@
                         Illustrations
                     </h3>
                     <p class="text-center ">
-                        Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
+                        Un bon design n'est rien sans de bonnes illustrations. Confiez votre projet à notre équipe de webdesigners talentueux pour donner à vos pages une touche finale d'élégance.
                     </p>
                 </div>
             </div>
             <div class="row voffset-lg voffset">
                 <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-                    <p class="citation">"La Chouette Agence est un excellente agence web !</br> Les web designers ont réussi à capturer l'essence de notre entreprises et à l'intégrer à notre site.</br> Cela nous a aidé à doubler nos ventes en ligne à Lyon"</p>
+                    <p class="citation">"La Chouette Agence est un excellente agence web !</br> Les webdesigners ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.</br> Cela nous a aidé à doubler nos ventes en ligne à Lyon"</p>
                     <p class="nom">Maxime Guilbard, PDG de À vos fourchettes</p>
                 </div>
             </div>
@@ -149,10 +149,10 @@
                 <div class="row tight-width-whitespace black-background">
                     <div class="col-sm-12">
                         <h2 class="mg-md text-center tc-white">
-                            Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
+                            Nous souhaitons, grâce à notre expertise en webdesign, aider les entreprises de Lyon et sa région à se développer et à connaître le succès. Nous travaillons pour aider ses entreprises locales à attirer de nouveaux clients .<br>
                         </h2>
                         <p class="text-center white">
-                            Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+                            Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locales, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
                         </p>
                     </div>
                 </div>
@@ -164,7 +164,7 @@
             <div class="container bloc-lg">
                 <div class="row">
                     <div class="col-sm-12 text-center">
-                        <h2>Nous travaillons de nombreuses entrepries, voici nos réalisations !</h2>
+                        <h2>Nous travaillons de nombreuses entreprises, voici nos réalisations !</h2>
                     </div>
                 </div>
                 <div class="row tight-width-whitespace portfolio-row">
@@ -215,10 +215,10 @@
             <div class="container bloc-lg">
                 <div class="row">
                     <h2 class="mg-md text-center txt-contact">
-                        Prêt à redonner vie à votre projet ?<br>Contactez notre équipe !
+                        Prêt à redonner vie à votre projet de webdesign ?<br>Contactez notre équipe !
                     </h2>
                     <div class="col-sm-12 text-center">
-                        <a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+                        <a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
                     </div>
                 </div>
             </div>
@@ -230,7 +230,7 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <p class="text-center white">
-                            La chouette agence - Agence web basée à Lyon.<br>
+                            La chouette agence - Agence webdesign basée à Lyon.<br>
                         </p>
                         <div class="row row-no-gutters social">
                             <div class="col-sm-3">
