--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
                                 <a href="#bloc-4-portfolio">Portefolio</a>
                             </li>
                             <li>
-                                <a href="page2.html">Contact</a>
+                                <a href="contact.html">Contact</a>
                             </li>
                         </ul>
                     </div>
