--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 <a href="#bloc-3-what-i-do">Notre Agence</a>
                             </li>
                             <li>
-                                <a href="#bloc-4-portfolio">Portefolio</a>
+                                <a href="#bloc-4-portfolio">Portfolio</a>
                             </li>
                             <li>
                                 <a href="contact.html">Contact</a>
