--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         </h1>
                         <h2 class="col-sm-12 text-center white">La chouette agence est une agence de <strong>webdesign à Lyon</strong> qui aide les entreprises à devenir attractives et visibles sur internet.</h2>
                         <div class="text-center">
-                        <a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" arial-label="bouton">Contact</a>
+                        <a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
                         </div>
                     </div>
                 </div>
@@ -217,7 +217,7 @@
                         Prêt à redonner vie à votre projet de webdesign ?<br>Contactez notre équipe !
                     </h2>
                     <div class="col-sm-12 text-center">
-                        <a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" arial-label="bouton">Contact</a>
+                        <a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
                     </div>
                 </div>
             </div>
