--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="La Chouette Agence, agence de communication digitale à Lyon, vous accompagne dans la création de supports papiers et web. Conseil, Création, Développement">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+    <link rel="shortcut icon" type="image/jpg" href="./img/favicon.jpg">
     <link href="https://adrienlgh.github.io/la-chouette-agence" rel="canonical">
 
 
